--- a/ImmoVlan.ipynb
+++ b/ImmoVlan.ipynb
@@ -140,6 +140,17 @@
     "    else:\n",
     "        surface = None\n",
     "    \n",
+    "    general = soup.find(\"div\", {\"id\":\"collapse_equipment_details\"})\n",
+    "    etat = None\n",
+    "    if general != None:\n",
+    "        for element in general:\n",
+    "            try:\n",
+    "                text = element.text.strip()\n",
+    "                if text == \"Etat du bien\":\n",
+    "                    etat = element.find_next_sibling().text.strip()\n",
+    "            except AttributeError:\n",
+    "                pass\n",
+    "            \n",
     "    exterieur = soup.find(\"div\", {\"id\":\"collapse_outdoor_details\"}).find_all(\"div\")\n",
     "    facades, surface_terrain, garden, garden_surface, terrasse, terrasse_surface, piscine = None, None, None, None, None, None, None\n",
     "    for element in exterieur:\n",
@@ -174,7 +185,7 @@
     "            meuble = element.find_next_sibling().text.strip()\n",
     "    \n",
     "    sanitaires = soup.find(\"div\", {\"id\":\"collapse_kitchenbath_details\"})\n",
-    "    salles_de_bain, toilettes = None, None\n",
+    "    salles_de_bain, toilettes, cuisine_equipee = None, None, None\n",
     "    if sanitaires != None:\n",
     "        sanitaires = sanitaires.find_all(\"div\")\n",
     "        for element in sanitaires:\n",
@@ -183,6 +194,8 @@
     "                salles_de_bain = element.find_next_sibling().text.strip()\n",
     "            elif text == \"Nombre de toilettes\":\n",
     "                toilettes = element.find_next_sibling().text.strip()\n",
+    "            elif text == \"Equipement de la cuisine\":\n",
+    "                cuisine_equipee = element.find_next_sibling().text.strip()\n",
     "    \n",
     "    equipments = soup.find(\"div\", {\"id\":\"collapse_equipment_details\"})\n",
     "    cheminee = None\n",
@@ -192,15 +205,14 @@
     "            text = element.text.strip()\n",
     "            if text == \"Feu ouvert\":\n",
     "                cheminee = element.find_next_sibling().text.strip()\n",
-    "            elif text == \"Nombre de toilettes\":\n",
-    "                toilettes = element.find_next_sibling().text.strip()\n",
+    "            \n",
     "    \n",
-    "    \"\"\"print(\"id:\", adid, \"- chambres:\", bedrooms, \"- ville:\", city, \"- prix: \", price, \"- type de vente:\", transaction_type,\n",
+    "    print(\"id:\", adid, \"- chambres:\", bedrooms, \"- ville:\", city, \"- prix: \", price, \"- type de vente:\", transaction_type,\n",
     "          \"- sous-type:\", subtype, \"- code-postal\", zipcode, \"- adresse:\",  adresse, \"surface:\", surface)\n",
     "    \n",
     "    print(\"- facades:\", facades, \"- surface_terrain:\", surface_terrain,\n",
     "          \"- garden:\", garden, \"- garden_surface:\", garden_surface, \"- terrasse:\", terrasse)\n",
-    "    print(\"interieur\", nombre_chambres, garage, surface_habitable)\"\"\""
+    "    print(\"interieur\", nombre_chambres, garage, surface_habitable)"
    ]
   },
   {
