--- a/ImmoVlan.ipynb
+++ b/ImmoVlan.ipynb
@@ -115,7 +115,13 @@
     "        transaction_type = transaction_type.get(\"content\")\n",
     "    else:\n",
     "        transaction_type = None\n",
-    "        \n",
+    "    \n",
+    "    type_prop = soup.find(\"meta\", {\"name\": \"cXenseParse:rob-immo-property-type\"})\n",
+    "    if type_prop!= None:\n",
+    "        type_prop = type_prop.get(\"content\")\n",
+    "    else:\n",
+    "        type_prop = None\n",
+    "    \n",
     "    subtype = soup.find(\"meta\", {\"name\": \"cXenseParse:rob-immo-property-subtype\"})\n",
     "    if subtype!= None:\n",
     "        subtype = subtype.get(\"content\")\n",
@@ -208,7 +214,7 @@
     "            \n",
     "    \n",
     "    print(\"id:\", adid, \"- chambres:\", bedrooms, \"- ville:\", city, \"- prix: \", price, \"- type de vente:\", transaction_type,\n",
-    "          \"- sous-type:\", subtype, \"- code-postal\", zipcode, \"- adresse:\",  adresse, \"surface:\", surface)\n",
+    "          \"- sous-type:\", subtype, \"- code-postal\", zipcode, \"- adresse:\",  adresse, \"surface:\", surface, type_prop)\n",
     "    \n",
     "    print(\"- facades:\", facades, \"- surface_terrain:\", surface_terrain,\n",
     "          \"- garden:\", garden, \"- garden_surface:\", garden_surface, \"- terrasse:\", terrasse)\n",
