--- a/ImmoVlan.ipynb
+++ b/ImmoVlan.ipynb
@@ -142,7 +142,7 @@
     "        \n",
     "    surface = soup.find(\"div\", {\"title\": \"Surface habitable\"})\n",
     "    if surface!= None:\n",
-    "        surface = surface.find(\"div\", {\"class\":\"fs-4\"}).text\n",
+    "        surface = surface.find(\"div\", {\"class\":\"fs-4\"}).text[:-3]\n",
     "    else:\n",
     "        surface = None\n",
     "    \n",
@@ -218,7 +218,8 @@
     "    \n",
     "    print(\"- facades:\", facades, \"- surface_terrain:\", surface_terrain,\n",
     "          \"- garden:\", garden, \"- garden_surface:\", garden_surface, \"- terrasse:\", terrasse)\n",
-    "    print(\"interieur\", nombre_chambres, garage, surface_habitable)"
+    "    print(\"interieur\", nombre_chambres, garage, surface_habitable)\n",
+    "    "
    ]
   },
   {
