--- a/ImmoVlan.ipynb
+++ b/ImmoVlan.ipynb
@@ -167,14 +167,26 @@
     "            surface_terrain = element.find_next_sibling().text.strip()[:-3]\n",
     "        elif text == \"Jardin\":\n",
     "            garden = element.find_next_sibling().text.strip()\n",
+    "            if garden == \"Oui\":\n",
+    "                    garden == 1\n",
+    "                else:\n",
+    "                    garden == 0\n",
     "        elif text == \"Surface du jardin\":\n",
     "            garden_surface = element.find_next_sibling().text.strip()[:-3]\n",
     "        elif text == \"Terrasse aménagée\":\n",
     "            terrasse = element.find_next_sibling().text.strip()\n",
+    "            if terrasse == \"Oui\":\n",
+    "                    terrasse == 1\n",
+    "                else:\n",
+    "                    terrasse == 0\n",
     "        elif text == \"Surface de la terrasse\":\n",
     "            terrasse_surface = element.find_next_sibling().text.strip()[:-3]\n",
     "        elif text == \"Piscine extérieure\":\n",
     "            piscine = element.find_next_sibling().text.strip()\n",
+    "            if piscine == \"Oui\":\n",
+    "                    piscine == 1\n",
+    "                else:\n",
+    "                    piscine == 0\n",
     "\n",
     "            \n",
     "    interieur = soup.find(\"div\", {\"id\":\"collapse_indoor_details\"}).find_all(\"div\")\n",
@@ -187,8 +199,16 @@
     "            surface_habitable = element.find_next_sibling().text.strip()[:-3]\n",
     "        elif text == \"Garage\":\n",
     "            garage = element.find_next_sibling().text.strip()\n",
+    "            if garage == \"Oui\":\n",
+    "                    garage == 1\n",
+    "                else:\n",
+    "                    garage == 0\n",
     "        elif text == \"Meublé\":\n",
     "            meuble = element.find_next_sibling().text.strip()\n",
+    "            if meuble == \"Oui\":\n",
+    "                    meuble == 1\n",
+    "                else:\n",
+    "                    meuble == 0\n",
     "    \n",
     "    sanitaires = soup.find(\"div\", {\"id\":\"collapse_kitchenbath_details\"})\n",
     "    salles_de_bain, toilettes, cuisine_equipee = None, None, None\n",
@@ -202,6 +222,10 @@
     "                toilettes = element.find_next_sibling().text.strip()\n",
     "            elif text == \"Equipement de la cuisine\":\n",
     "                cuisine_equipee = element.find_next_sibling().text.strip()\n",
+    "                if cuisine_equipee == \"Oui\":\n",
+    "                    cuisine_equipee == 1\n",
+    "                else:\n",
+    "                    cuisine_equipee == 0\n",
     "    \n",
     "    equipments = soup.find(\"div\", {\"id\":\"collapse_equipment_details\"})\n",
     "    cheminee = None\n",
@@ -211,6 +235,10 @@
     "            text = element.text.strip()\n",
     "            if text == \"Feu ouvert\":\n",
     "                cheminee = element.find_next_sibling().text.strip()\n",
+    "                if cheminee == \"Oui\":\n",
+    "                    cheminee == 1\n",
+    "                else:\n",
+    "                    cheminee == 0\n",
     "            \n",
     "    \n",
     "    print(\"id:\", adid, \"- chambres:\", bedrooms, \"- ville:\", city, \"- prix: \", price, \"- type de vente:\", transaction_type,\n",
