--- a/02.selenium.ipynb
+++ b/02.selenium.ipynb
@@ -1397,158 +1397,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.common.exceptions import TimeoutException\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver import ActionChains\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "import time\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "class ImmoScrapping:\n",
-    "    def __init__(self, url):\n",
-    "        self.driver = webdriver.Chrome()\n",
-    "        self.pages_to_scrap = []\n",
-    "        self.last = 0\n",
-    "        self.number_page_scrapped = 0\n",
-    "        self.driver.get(url)\n",
-    "        time.sleep(10)\n",
-    "        print('ready')\n",
-    "\n",
-    "    def start_research(self, xpath, research_sentence):\n",
-    "        current_url = self.driver.current_url\n",
-    "        elem = self.driver.find_element_by_xpath(xpath)\n",
-    "        elem.clear()\n",
-    "        elem.send_keys(research_sentence)\n",
-    "        try: element = WebDriverWait(driver, 10).until(\n",
-    "                EC.presence_of_element_located((By.ID, \"myDynamicElement\"))\n",
-    "            close_button = self.driver.find_element_by_xpath(\"//button[@class='c-button c-button--default']\")\n",
-    "            actions = ActionChains(self.driver)\n",
-    "            actions.move_to_element(close_button)\n",
-    "            actions.click(close_button)\n",
-    "            actions.perform()\n",
-    "        except:\n",
-    "            print('')\n",
-    "        #time.sleep(3)\n",
-    "        elem.send_keys(Keys.DOWN)\n",
-    "        #time.sleep(3)\n",
-    "        elem.send_keys(Keys.RETURN)\n",
-    "        time.sleep(1)\n",
-    "        elem.send_keys(Keys.RETURN)\n",
-    "        WebDriverWait(self.driver, 15).until(EC.url_changes(current_url))\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def get_number_pages(self, last_entry_location):\n",
-    "        my_soup = BeautifulSoup(self.driver.page_source, features=\"html.parser\")\n",
-    "        links = my_soup.find(last_entry_location[0], last_entry_location[1])\n",
-    "        self.last = int(links.split('/')[-1])\n",
-    "        print(self.last, 'page to scrap')\n",
-    "\n",
-    "    def scrap_page(self, xpaths):\n",
-    "        print('scrapping page ', self.number_page_scrapped+1)\n",
-    "        for i in range(self.last):\n",
-    "            elements = []\n",
-    "            for xpath in xpaths:\n",
-    "                elements_for_xpath = self.driver.find_elements_by_xpath(xpath)\n",
-    "                elements += elements_for_xpath\n",
-    "            for i in range(len(elements)):\n",
-    "                elem = elements[i]\n",
-    "                windows_before = self.driver.window_handles\n",
-    "                actions = ActionChains(self.driver)\n",
-    "                actions.move_to_element(elem)\n",
-    "                actions.key_down(Keys.LEFT_CONTROL)\n",
-    "                actions.click(elem)\n",
-    "                actions.perform()\n",
-    "                WebDriverWait(self.driver, 20).until(EC.new_window_is_opened(windows_before))\n",
-    "                self.driver.switch_to.window(self.driver.window_handles[1])\n",
-    "                source_page = self.driver.page_source\n",
-    "                source_pages_url = self.driver.current_url\n",
-    "                self.driver.close()\n",
-    "                self.driver.switch_to.window(self.driver.window_handles[0])\n",
-    "                yield source_page\n",
-    "        self.number_page_scrapped += 1\n",
-    "\n",
-    "    def next_page(self, xpath):\n",
-    "        if self.number_page_scrapped == self.last:\n",
-    "            return False\n",
-    "        current_url = self.driver.current_url\n",
-    "        elem = self.driver.find_element_by_xpath(xpath)\n",
-    "        actions = ActionChains(self.driver)\n",
-    "        actions.click(elem)\n",
-    "        actions.perform()\n",
-    "        WebDriverWait(self.driver, 15).until(EC.url_changes(current_url))\n",
-    "        return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "ready\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "TimeoutException",
-     "evalue": "Message: \n",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-6fc2b96433b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mpath_to_research_field\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'//input[@placeholder=\"Ville, province ou code postal\"]'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0minput_sentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'MONS'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mmy_scrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_research\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_research_field\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_sentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0mxpaths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"//div[@class='property-description']\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mlast_entry_location\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'li'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'class'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'col-lg-10 text-center'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/BeCode/Projects/Collecting Data/ImmoScrapping.py\u001b[0m in \u001b[0;36mstart_research\u001b[0;34m(self, xpath, research_sentence)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0melem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresearch_sentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0melem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKeys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRETURN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0mWebDriverWait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muntil\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEC\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murl_changes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_url\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_number_pages\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlast_entry_location\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/selenium/webdriver/support/wait.py\u001b[0m in \u001b[0;36muntil\u001b[0;34m(self, method, message)\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mend_time\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mTimeoutException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0muntil_not\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTimeoutException\u001b[0m: Message: \n"
+      "I start loop  0\nready\nI reached 0\nready\nI reached 1\nready\nI reached 2\nI start loop  1\nready\nI reached 0\nready\nI reached 1\nready\nI reached 2\nI start loop  2\nready\nI reached 0\nready\nI reached 1\nready\nI reached 2\nI start loop  3\nready\nI reached 0\nready\nI reached 1\nready\nI reached 2\nI start loop  4\nready\nI reached 0\nready\nI reached 1\nready\nI reached 2\n"
      ]
     }
    ],
    "source": [
-    "from ImmoScrapping import ImmoScrapping\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.common.exceptions import TimeoutException\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver import ActionChains\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "import time\n",
-    "from bs4 import BeautifulSoup\n",
-    "from page_scrapping import b_soup_immo\n",
+    "def my_iterator_test(n):\n",
+    "    for i in range(5):\n",
+    "        print('I start loop ',i)\n",
+    "        for j in range(n):\n",
+    "            print('ready')\n",
+    "            yield 'I reached '+str(j)\n",
     "\n",
-    "#with open('data.csv', 'w') as file:\n",
-    "    #file.write(\"adid, bedrooms, city, price, transaction_type, subtype, \"\n",
-    "    #           \"zipcode, adresse, surface, type_prop, etat, facades, surface_terrain, garden, \"\n",
-    "    #           \"garden_surface, terrasse, terrasse_surface, piscine, nombre_chambres, garage, surface_habitable, \"\n",
-    "    #           \"meuble, salles_de_bain, toilettes, cuisine_equipee, cheminee\\n\")\n",
-    "\n",
-    "my_scrapper = ImmoScrapping('https://www.logic-immo.be/fr/immobilier-belgique.html')\n",
-    "path_to_research_field = '//input[@placeholder=\"Ville, province ou code postal\"]'\n",
-    "input_sentence = 'MONS'\n",
-    "my_scrapper.start_research(path_to_research_field, input_sentence)\n",
-    "xpaths = [\"//div[@class='property-description']\"]\n",
-    "last_entry_location = ('li', {'class':'col-lg-10 text-center'})\n",
-    "next_page_xpath = \"//span[@class='glyphicon glyphicon-chevron-right']\"\n",
-    "print('compute number of page')\n",
-    "my_scrapper.get_number_pages(last_entry_location)\n",
-    "while True:\n",
-    "    for html_page in my_scrapper.scrap_page(xpaths):\n",
-    "        print('page scrapped')\n",
-    "        #with open('data.csv', 'a') as file:\n",
-    "        #    file.write(b_soup_immo(html_page)+\"\\n\")\n",
-    "    next_page_test = my_scrapper.next_page(next_page_xpath)\n",
-    "    if not next_page_test:\n",
-    "        break\n"
+    "for k in my_iterator_test(3):\n",
+    "    print(k)\n",
+    "\n"
    ]
   },
   {
